adding hw for classes JavaScript

--- a/index.html
+++ b/index.html
@@ -4,41 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./images/cloud-computing.png" type="image/x-icon">
-    <title>weather App</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./style.css">
+    <title>Document</title>
+
+    <style>
+        body {
+            background-color: #333;
+        }
+    </style>
 </head>
 <body>
     
 
-    <h1 class="h1_weatherApp">
-        Simple Weather App
-    </h1>
+    <!-- <script src="./task_1.js" type="module"></script> -->
+    <!-- <script src="./task_2.js" type="module" ></script> -->
+    <!-- <script src="./task_3.js" type="module" ></script> -->
+    <!-- <script src="./task_4.js" type="module" ></script> -->
+    <script src="./task_5.js" type="module" ></script>
 
-
-
-    <div class="block_input">
-        <input type="text" class="inputweather" placeholder="Seach the city" maxlength="20" >
-
-        <button class="btn_search" >
-            search
-        </button>
-    </div>
-
-    
-
-
-    <div class="blockInfo">
-
-    </div>
-
-
-    <!-- <script src="./node_modules/jquery/dist/jquery.js"></script> -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="./class.js" ></script>
-    <script src="./main.js"></script>
-    <script src="./presentation.js"></script>
 </body>
 </html>
