--- a/index.html
+++ b/index.html
@@ -5,10 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <title>Document</title>
+    <title>HW 6 SkillUp</title>
 </head>
 <body>
     
-    <script src="./main.js" type="module"></script>
+
+    <!-- <script src="./task_1.js" type="module"></script> -->
+    <!-- <script src="./task_2.js" type="module"></script> -->
+    <!-- <script src="./task_3.js" type="module"></script> -->
+    <!-- <script src="./task_4.js" type="module"></script> -->
+    <!-- <script src="./task_5.js" type="module"></script> -->
+    <!-- <script src="./task_6.js" type="module"></script> -->
+    <!-- <script src="./task_7.js" type="module"></script> -->
+    <!-- <script src="./task_8.js" type="module"></script> -->
+    <!-- <script src="./task_9.js" type="module"></script>  -->
+    <script src="./task_10.js" type="module"></script>
+
 </body>
 </html>
