--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="./images/age.png" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400;500;600;700&display=swap"
@@ -34,7 +35,7 @@
             placeholder="enter the year..."
             autocomplete="off"
           />
-          <button class="js-submit-year" disabled>Submit</button>
+          <button class="js-submit-year">Submit</button>
         </div>
       </nav>
 
